# lab-utilities

./: README.md  pyproject.toml
chan_loc_files/: BC-128-epoc.lay  BC-MR-32.bvef  README.md
eeg_sanity/: README.md  check_epoc_impendaces.ipynb  check_impedances.py  check_sanity.py  check_stepup_impendaces.ipynb
eeg_sanity/impedance_checks/: impedances_EPOC_2024-12-17.csv  impedances_stepup_2024-12-17.csv
eeg_sanity/raw/: RO26BU.vhdr  RO26BU.vmrk
extractBidsData/: findAndCopyFiles.py
lab2bids/: README.md
lab2bids/EPI_xdf2bids_mne/: README.md  clinic2participants.py  xdf2bids.py
lab2bids/EPI_xdf2bids_mne/src/: utls.py
lab2bids/EPOC_xdf2bids/: README.md
lab2bids/EPOC_xdf2bids/code/: bemobil_xdf2bids.m  xdf2bids.m
lab2bids/EPOC_xdf2bids/fun/: findLslStream.m
lab2bids/EPOC_xdf2bids/fun/00_pvt/: pvt_beh.m
lab2bids/EPOC_xdf2bids/fun/01_oddball/: oddball_beh.m  oddball_eeg.m  oddball_trialfun_events.m  trialfun_fulldata.m
lab2bids/EPOC_xdf2bids/fun/02_RTE/: rte_beh.m
lab2bids/EPOC_xdf2bids/fun/03_nback/: nback_beh.m
lab2bids/EPOC_xdf2bids/fun/04_total_scores/: calc_K2.m  calc_K3.m  calc_K4.m  calc_K5.m  calc_K7.m  calc_ewb.m  calc_fs.m  calc_fwb.m  calc_hadsa.m  calc_hadsd.m  calc_pwb.m  calc_swb.m
test_recordings/: Experiment_testlauf.xdf  Oddball.xdf  test_xdf_marker.py
