[tool.poetry]
name = "lab-utilities"
version = "0.1.0"
description = "This repo hosts code to handle EEG data recorded at the UKSH"
authors = ["Julius Welzel <julius.welzel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mne = "^1.6.1"
ipykernel = "^6.29.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
